--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,9 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+# misc
+.env
+.env.local
+.env.development.local
+.env.test.local
