chore(config): add config module

--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:setup": "docker compose up test-database -d && prisma migrate deploy && prisma generate",
+    "test:cleanup": "docker compose down test-database",
+    "test:e2e": "pnpm run test:setup && jest --config ./test/jest-e2e.json && pnpm run test:cleanup",
     "prepare": "husky install"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
