--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:setup": "docker compose up test-database -d && prisma migrate deploy && prisma generate",
+    "test:setup": "docker compose up test-database --wait && dotenv -e .env.test -- prisma migrate deploy && prisma generate",
     "test:cleanup": "docker compose down test-database",
-    "test:e2e": "pnpm run test:setup && jest --config ./test/jest-e2e.json && pnpm run test:cleanup",
+    "test:e2e": "pnpm run test:setup && dotenv -e .env.test -- jest --config ./test/jest-e2e.json && pnpm run test:cleanup",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -46,6 +46,7 @@
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "dotenv-cli": "^7.3.0",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
