--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test:setup": "docker compose up test-database --wait && dotenv -e .env.test -- prisma migrate deploy && prisma generate",
     "test:cleanup": "docker compose down test-database",
     "test:e2e": "pnpm run test:setup && dotenv -e .env.test -- jest --config ./test/jest-e2e.json && pnpm run test:cleanup",
-    "prepare": "husky install"
+    "prepare": "node -e \"try { require('husky').install() } catch (e) {if (e.code !== 'MODULE_NOT_FOUND') throw e}\""
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
