--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/terminus": "^10.1.1",
     "@prisma/client": "^5.5.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
